--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -1,17 +1,36 @@
 .Header {
-    background-image: url(./header.png);
-    background-size: 100% 100%;
-    width: 100%;
-    height: 300px; /* you may also change this */
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
+  background-image: url(./header.png);
+  background-size: 100% 100%;
+  width: 100%;
+  height: 300px; /* you may also change this */
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
 }
 
-.Title{
-    padding: 0;
-    margin-top: 0;
-    font-size: 90px;
-    color:white;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 270px; 
+.Title {
+  padding: 0;
+  margin-top: 0;
+  font-size: 90px;
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 270px;
+}
+
+.Menu {
+  width: 100%;
+  height: 40px;
+  background-color: white;
+  text-align: center;
+}
+
+.menuItem {
+  margin-top: 10px;
+  display: inline-block;
+  margin-right: 10px;
+  font-size: large;
+}
+
+.menuItem:hover {
+  color: rgb(91, 91, 91);
+  cursor: pointer;
 }
